# WebAttacks-identifier

./: .gitignore  classification_report.csv  example_extraction.csv  label_encoder.pkl  label_encoder_classes.pkl  pca.pkl  preprocessor.pkl  pyproject.toml  scaler.pkl  svm_model.pkl  svm_model_best.pkl  svm_model_sample.pkl
webattacks_identifier/: app.py
webattacks_identifier/model/: extract_feautres.py  load_combine.py  old_train.py  predict.py  preproccess.py  report.py  test.py  train.py
webattacks_identifier/pcap_files/: Pod HTTP Post.pcap  mypcap.pcap
