[tool.poetry]
name = "webattacks_identifier"
version = "0.1.0"
description = ""
authors = ["Or Basker <or.basker@ridewithvia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
imblearn = "^0.0"
imbalanced-learn = "^0.12.3"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
streamlit = "^1.35.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scapy = "^2.5.0"
pyshark = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
